# N.E.K.O

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTEXT.md  CONTRIBUTING.md  FULL_PAGE_TUTORIAL_COMPLETE.md  NOTICE  README.MD  README_rewrite.md  TEST_XML_MEMORY.md  TUTORIAL_SPEC.md  UNIVERSAL_TUTORIAL_GUIDE.md  agent_server.py  bilibili_api_pathchange-0.1.0-py3-none-any.whl  build_frontend.bat  build_frontend.sh  build_nuitka.bat  check_syntax.py  compare_endpoints.py  conftest.py  design-qa.md  endpoint_audit_report.txt  endpoint_comparison.txt  endpoints.json  et1acf35f  git_old_index.html  git_old_version.py  launcher.py  main_server.py  memory_server.py  monitor.py  package.json  pyproject.toml  pytest.ini  requirements.txt  start-battle-arena.bat  start-card-forge.bat  start_battle_arena.py  start_card_forge.py  (+12 more)
.agent/: project-handoff-notes.md
.github/: CODEOWNERS  pull_request_template.md
.workbuddy/: test_danmaku.py
app/: __init__.py  agent_server.py  controler.py  main_server.py  memory_server.py  monitor.py  runtime_bindings.py
battle-arena/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
brain/: agent_session.py  browser_use_adapter.py  computer_use.py  deduper.py  mcp_client.py  openclaw_adapter.py  openfang_adapter.py  planner.py  plugin_analyzer_view.py  plugin_filter.py  plugin_reply.py  processor.py  result_parser.py  task_executor.py
cache/: cache.db-shm  cache.db-wal
card-forge/: index.html  package-lock.json  package.json  port-config.js  tailwind.config.js  vite.config.js
config/: __init__.py  _runtime.py  activity_keywords.py  agent_settings.py  api_profiles.py  api_providers.json  application.py  bilibili_key.key  character_defaults.py  character_fields.py  characters.en.json  characters.ja.json  characters.ko.json  characters.ru.json  characters.zh-CN.json  characters.zh-TW.json  focus_settings.py  integration_settings.py  memory_settings.py  (+18 more)
plugin/neko-plugin-cli/: cli.py  pyproject.toml  quick_inspect.py  quick_pack.py  quick_unpack.py
plugin/neko-plugin-cli/docs/: package-format.md
plugin/neko-plugin-cli/public/: __init__.py  archive_utils.py  bundle_analysis.py  inspect.py  models.py  normalize.py  pack.py  pack_rules.py  plugin_source.py  profile.py  toml_utils.py  unpack.py
plugin/neko-plugin-cli/src/neko_plugin_cli/: cli.py  paths.py
plugin/neko-plugin-cli/src/neko_plugin_cli/commands/: _completers.py  _prompt.py  _resolve.py  analyze_cmd.py  init_cmd.py  inspect_cmd.py  pack_cmd.py  release_cmd.py  unpack_cmd.py  validate_cmd.py  verify_cmd.py
plugin/neko-plugin-cli/src/neko_plugin_cli/core/: inspect.py  plugin_source.py  unpack.py
plugin/neko-plugin-cli/src/neko_plugin_cli/templates/: generator.py
plugin/plugins/live2d_auto_layer/: .gitignore  README.md  UPSTREAM.md  __init__.py  plugin.toml  pyproject.toml
plugin/plugins/live2d_auto_layer/core/: __init__.py  anime_face.py  config.py  constants.py  export.py  grounded_sam.py  image_utils.py  matting.py  pipeline.py  preprocess.py  segment.py  session_id.py  types.py  vision_landmarks.py
plugin/plugins/live2d_auto_layer/core/assembly/: __init__.py  layer_mapping.py  layer_model.py  live2d_assembler.py
plugin/plugins/live2d_auto_layer/core/auto_rig/: __init__.py  export.py  load.py  mesh.py  model.py  template.py
plugin/plugins/live2d_auto_layer/core/cubism/: __init__.py  editor_api.py  handoff.py
plugin/plugins/live2d_auto_layer/core/exporting/: __init__.py  layers.py
plugin/plugins/live2d_auto_layer/core/image/: __init__.py  matting.py  preprocess.py  utils.py
plugin/plugins/live2d_auto_layer/core/importing/: __init__.py  see_through.py
plugin/plugins/live2d_auto_layer/core/pngtuber/: __init__.py  export.py  install.py
plugin/plugins/live2d_auto_layer/core/segmentation/: __init__.py  anime_face.py  grounded_sam.py  segment.py
plugin/plugins/live2d_auto_layer/i18n/: en.json  zh-CN.json
plugin/plugins/live2d_auto_layer/models/: .gitignore
plugin/plugins/live2d_auto_layer/routers/: __init__.py  cubism_editor.py  environment.py  process.py
plugin/plugins/live2d_auto_layer/services/: __init__.py  environment.py  layer_service.py  session_store.py
plugin/plugins/live2d_auto_layer/tests/: test_core_layout.py  test_cubism_editor_api.py  test_pngtuber_workspace_surface.py  test_session_id.py  test_smoke.py
plugin/plugins/live2d_auto_layer/ui/: panel.tsx
plugin/plugins/live2d_auto_layer/upstream/live2d-auto-layer/: .gitignore  README.md  app.py  config.py  requirements.txt
plugin/plugins/live2d_auto_layer/upstream/live2d-auto-layer/src/: anime_face.py  export.py  grounded_sam.py  matting.py  preprocess.py  segment.py
plugin/plugins/live2d_auto_layer/upstream/live2d-auto-layer/utils/: image_utils.py
(+4957 files in other folders)
