[project]
name = "neko-plugin-cli"
version = "0.2.0"
description = "N.E.K.O plugin packaging, inspection, and scaffolding CLI"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
# tomli is only needed on Python <3.11 where tomllib is not available
legacy = ["tomli>=2.0"]
completion = ["shtab>=1.7"]

[project.scripts]
neko-plugin = "neko_plugin_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neko_plugin_cli"]
