[project]
name = "live2d_auto_layer"
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
color = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "scikit-learn>=1.3",
    "scikit-image>=0.21",
    "scipy>=1.10",
    "rembg[cpu]>=2.0",
    "onnxruntime>=1.17",
]
anime-face = [
    "torch>=2.0",
    "torchvision>=0.15",
    "segment-anything>=1.0",
]
runtime = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "scikit-learn>=1.3",
    "scikit-image>=0.21",
    "scipy>=1.10",
    "rembg[cpu]>=2.0",
    "onnxruntime>=1.17",
    "torch>=2.0",
    "torchvision>=0.15",
    "segment-anything>=1.0",
]
